--- a/Examples/TestClient.csproj
+++ b/Examples/TestClient.csproj
@@ -47,13 +47,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\uPnP\uPnP.csproj">
+    <ProjectReference Include="..\uPnP.csproj">
       <Project>{68C6DB79-8078-49F3-AB53-66E2EAA42179}</Project>
       <Name>uPnP</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
 </Project>
