Nuked old build files. Updated makefiles
svn path=/trunk/Mono.Nat/; revision=99294

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,1 +1,10 @@
-SUBDIRS = Mono.Nat
+
+EXTRA_DIST =  expansions.m4
+
+#Warning: This is an automatically generated file, do not edit!
+if ENABLE_DEBUG_ANY_CPU
+ SUBDIRS =  Mono.Nat Mono.Nat.Test
+endif
+if ENABLE_RELEASE_ANY_CPU
+ SUBDIRS =  Mono.Nat Mono.Nat.Test
+endif
