--- a/src/Mono.Nat/Mono.Nat.csproj
+++ b/src/Mono.Nat/Mono.Nat.csproj
@@ -43,20 +43,23 @@
     <Compile Include="AbstractNatController.cs" />
     <Compile Include="AbstractNatDevice.cs" />
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="AsyncResults\AbstractPortMapAsyncResult.cs" />
+    <Compile Include="AsyncResults\AsyncResult.cs" />
     <Compile Include="Enums\MapState.cs" />
     <Compile Include="Enums\ProtocolType.cs" />
     <Compile Include="EventArgs\DeviceEventArgs.cs" />
     <Compile Include="Exceptions\MappingException.cs" />
     <Compile Include="INatController.cs" />
     <Compile Include="INatDevice.cs" />
+    <Compile Include="ISearcher.cs" />
     <Compile Include="Mapping.cs" />
     <Compile Include="NatUtility.cs" />
+    <Compile Include="PmpSearcher.cs" />
     <Compile Include="Pmp\AsyncResults\PortMapAsyncResult.cs" />
     <Compile Include="Pmp\PmpConstants.cs" />
     <Compile Include="Pmp\PmpNatController.cs" />
     <Compile Include="Pmp\PmpNatDevice.cs" />
     <Compile Include="TimerUtility.cs" />
+    <Compile Include="UpnpSearcher.cs" />
     <Compile Include="Upnp\AsyncResults\GetAllMappingsAsyncResult.cs" />
     <Compile Include="Upnp\AsyncResults\PortMapAsyncResult.cs" />
     <Compile Include="Upnp\Messages\DiscoverDeviceMessage.cs" />
