--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,9 +2,9 @@
 EXTRA_DIST =  expansions.m4
 
 #Warning: This is an automatically generated file, do not edit!
-if ENABLE_DEBUG_ANY_CPU
- SUBDIRS =  Mono.Nat Mono.Nat.Test
+if ENABLE_DEBUG
+ SUBDIRS =  Mono.Nat
 endif
-if ENABLE_RELEASE_ANY_CPU
- SUBDIRS =  Mono.Nat Mono.Nat.Test
+if ENABLE_RELEASE
+ SUBDIRS =  Mono.Nat
 endif
