--- a/scripts/Mono.Nat.dll.template.nuspec
+++ b/scripts/Mono.Nat.dll.template.nuspec
@@ -9,8 +9,15 @@
         <projectUrl>https://github.com/nterry/Mono.Nat</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>NAT stack for Mono and .NET applications</description>
-        <releaseNotes>Added useful improvements/fixes from Github user cwensley</releaseNotes>
+        <releaseNotes>Added useful improvements/fixes from Github user cwensley
+        Fixed dependencies
+		</releaseNotes>
         <copyright>Copyright 2006 - 2007 Alan McGovern and Ben Motmans. See LICENSE for more details.</copyright>
         <tags>nat nat-transversal upnp mono.nat mono</tags>
+		<dependencies>
+            <group targetFramework=".NETFramework4.0">
+                <dependency id="Type2Byte" version="1.1" />
+            </group>
+        </dependencies>
     </metadata>
 </package>
