Revert "Fixed nuget dependencies"
This reverts commit 434730630558f7cfba66d0b8a08852ba24f31cf9.

Conflicts:
	scripts/Mono.Nat.dll.template.nuspec

--- a/scripts/Mono.Nat.dll.template.nuspec
+++ b/scripts/Mono.Nat.dll.template.nuspec
@@ -10,15 +10,10 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>NAT stack for Mono and .NET applications</description>
         <releaseNotes>Added useful improvements/fixes from Github user cwensley
-Fixed dependencies
-Completely decoupled from Bitconverter thus making this library fully mono capable 
-		</releaseNotes>
+Removed dependency on Type2Byte as It has been deprecated following confirmation that BitConvert actualy does work with Mono.
+	</releaseNotes>
+
         <copyright>Copyright 2006 - 2007 Alan McGovern and Ben Motmans. See LICENSE for more details.</copyright>
         <tags>nat nat-transversal upnp mono.nat mono</tags>
-		<dependencies>
-            <group targetFramework=".NETFramework4.0">
-                <dependency id="Type2Byte" version="1.1" />
-            </group>
-        </dependencies>
     </metadata>
 </package>
