--- a/scripts/Mono.Nat.dll.template.nuspec
+++ b/scripts/Mono.Nat.dll.template.nuspec
@@ -12,10 +12,9 @@ Nicholas Terry &lt;nick.i.terry@gmail.com&gt;
         <projectUrl>https://github.com/nterry/Mono.Nat</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>NAT stack for Mono and .NET applications</description>
-        <releaseNotes>
-Added Android target for nuget
-Added Xamarin.Android project
-Cleaned up a bunch of code and refactored out redundancies everywhere
+        <releaseNotes>Added useful improvements/fixes from Github user cwensley
+Removed dependency on Type2Byte as It has been deprecated following confirmation that BitConvert actually does work with Mono.
+Added Android target for nuget.
 	</releaseNotes>
 
         <copyright>Copyright 2006 - 2007 Alan McGovern and Ben Motmans. See LICENSE for more details.</copyright>
