Started initial implementation for mapper

--- a/Mono.Nat/Mono.Nat.csproj
+++ b/Mono.Nat/Mono.Nat.csproj
@@ -68,15 +68,17 @@
     <Compile Include="Enums\ProtocolType.cs" />
     <Compile Include="EventArgs\DeviceEventArgs.cs" />
     <Compile Include="Exceptions\MappingException.cs" />
+    <Compile Include="IMapper.cs" />
     <Compile Include="INatDevice.cs" />
     <Compile Include="ISearcher.cs" />
     <Compile Include="Mapping.cs" />
     <Compile Include="NatUtility.cs" />
-    <Compile Include="PmpSearcher.cs" />
+    <Compile Include="Pmp\Mappers\PmpMapper.cs" />
+    <Compile Include="Pmp\Searchers\PmpSearcher.cs" />
     <Compile Include="Pmp\AsyncResults\PortMapAsyncResult.cs" />
     <Compile Include="Pmp\PmpConstants.cs" />
     <Compile Include="Pmp\PmpNatDevice.cs" />
-    <Compile Include="UpnpSearcher.cs" />
+    <Compile Include="Upnp\Searchers\UpnpSearcher.cs" />
     <Compile Include="Upnp\AsyncResults\GetAllMappingsAsyncResult.cs" />
     <Compile Include="Upnp\AsyncResults\PortMapAsyncResult.cs" />
     <Compile Include="Upnp\Messages\DiscoverDeviceMessage.cs" />
