--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Ignore makefile foo
-src/aclocal.m4
-src/autom4te.cache/
-src/config.log
-src/config.status
-src/configure
-src/install-sh
-src/missing
+aclocal.m4
+autom4te.cache/
+config.log
+config.status
+configure
+install-sh
+missing
 Makefile
 Makefile.in
 
@@ -13,15 +13,15 @@ Makefile.in
 *.userprefs
 *.pidb
 
-src/Mono.Nat/bin
-src/Mono.Nat/obj
-src/Mono.Nat.Test/bin
-src/Mono.Nat.Test/obj
+bin/
+obj/
 
 # Ignore the pc file
-src/Mono.Nat/mono.nat.pc
+Mono.Nat/mono.nat.pc
 
 # Ignore debug foo
 xdb.il
 xdb.s
 
+
+*.suo
