[build] Make the test app an executable again :p

--- a/Mono.Nat.Test/Mono.Nat.Test.csproj
+++ b/Mono.Nat.Test/Mono.Nat.Test.csproj
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <TargetFramework>net472</TargetFramework>
+    <OutputType>exe</OutputType>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Mono.Nat\Mono.Nat.csproj" />
   </ItemGroup>
