Some cleanups - maybe another release?
I hid some API so only the necessary stuff is public.

I also removed the IMapper stuff and exposed the exact
same functionality in ISearcher and NatUtility. Instead
of mapping, you just search and pass in the IP of the
gateway. It runs through the exact same codepath then!

The main INatDevice interface contains only the Async
methods, and the synchronous ones, and ones using
BeginX/EndX are declared as extension methods instead.

I'm in two minds about just removing them completely,
but they kinda do still serve a bit of a purpose.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,15 +4,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\mono-nat.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)\mono-nat.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup>
     <!-- This controls the [AssemblyVersion] attribute -->
-    <AssemblyVersion>0.9.9.0</AssemblyVersion>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
 
     <!-- This controls the [AssemblyInformationalVersion] and [AssemblyFileVersion] attributes -->
-    <InformationalVersion>1.9.9.0</InformationalVersion>
+    <InformationalVersion>2.0.0.0</InformationalVersion>
     <FileVersion>$(InformationalVersion)</FileVersion>
   </PropertyGroup>
 
