--- a/Mono.Nat.Test/Mono.Nat.Test.csproj
+++ b/Mono.Nat.Test/Mono.Nat.Test.csproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
-    <OutputType>exe</OutputType>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
