[build] Shuffle this around and choose a framework explicitly
Make sure this is set to netstandard 2.0

--- a/Mono.Nat/Mono.Nat.csproj
+++ b/Mono.Nat/Mono.Nat.csproj
@@ -2,20 +2,22 @@
 <Project>
 
 	<Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
-	<Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 
 	<PropertyGroup>
-		<GitThisAssembly>false</GitThisAssembly>
 		<Deterministic>true</Deterministic>
-	</PropertyGroup>
-
-	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-		<CoreCompileDependsOn>SetBuildVersion;$(CoreCompileDependsOn)</CoreCompileDependsOn>
+		<GitThisAssembly>false</GitThisAssembly>
+		<TargetFramework>netstandard2.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="GitInfo" Version="2.0.20" PrivateAssets="all" />
 	</ItemGroup>
+
+	<Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
+
+	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+		<CoreCompileDependsOn>SetBuildVersion;$(CoreCompileDependsOn)</CoreCompileDependsOn>
+	</PropertyGroup>
 
 	<Target Name="SetBuildVersion" DependsOnTargets="GitInfo">
 		<PropertyGroup>
