--- a/Mono.Nat/Mono.Nat.csproj
+++ b/Mono.Nat/Mono.Nat.csproj
@@ -15,7 +15,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0'" Include="System.Buffers" Version="4.5.1" PrivateAssets="all" />
+		<PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0'" Include="System.Memory" Version="4.5.4" PrivateAssets="all" />
 		<PackageReference Include="GitInfo" Version="2.0.20" PrivateAssets="all" />
 	</ItemGroup>
 
