--- a/Mono.Nat/Mono.Nat.csproj
+++ b/Mono.Nat/Mono.Nat.csproj
@@ -4,7 +4,6 @@
 	<Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
 
 	<PropertyGroup>
-		<Deterministic>true</Deterministic>
 		<GitThisAssembly>false</GitThisAssembly>
 		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
 
@@ -14,8 +13,12 @@
 		<BeforePack>$(BeforePack);SetPackProperties</BeforePack>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<DefineConstants Condition=" '$(TargetFramework)' == 'netstandard2.0'">$(DefineConstants);NETSTANDARD2_0</DefineConstants>
+		<DefineConstants Condition=" '$(TargetFramework)' == 'netstandard2.1'">$(DefineConstants);NETSTANDARD2_1</DefineConstants>
+	</PropertyGroup>
+
 	<ItemGroup>
-		<PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0'" Include="System.Memory" Version="4.5.4" PrivateAssets="all" />
 		<PackageReference Include="GitInfo" Version="2.0.20" PrivateAssets="all" />
 	</ItemGroup>
 
