--- a/Mono.Nat.Console/Mono.Nat.Console.csproj
+++ b/Mono.Nat.Console/Mono.Nat.Console.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFrameworks>net6.0;net472</TargetFrameworks>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
